fixed the supermarket cards hover bug by creating a new parent div that wrapped the whole document and used it as postion relative instead of the body tag the used z-index a lower z-index on the welcome section and a highr z-zindex on the grid, but the same method does noot seem to work on other elements, so all other pointer events in the page are still not working

--- a/index-resources/index.css
+++ b/index-resources/index.css
@@ -1,7 +1,10 @@
 body {
-  position: relative;
   padding: 0;
   overflow-x: hidden;
+}
+
+.parent {
+  position: relative;
 }
 
 .welcome-section-container {
@@ -18,6 +21,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: -0.5em;
+  z-index: 1;
 }
 
 .welcome-section {
@@ -51,6 +55,10 @@ body {
   transition: animation 4s;
 }
 
+.z-index-2 {
+  z-index: 2;
+}
+
 .sublinks li a {
   color: black;
 }
@@ -59,7 +67,7 @@ body {
   color: orange;
 }
 
-.height-10vh {
+.header {
   max-height: 20vh;
   overflow-y: hidden;
 }
@@ -102,6 +110,7 @@ body {
     "quickmart naivas"
     "tuskys carrefour";
   grid-gap: 1em;
+  z-index: 2;
 }
 
 .supermarket {
@@ -115,7 +124,6 @@ body {
   transition: transform ease-in-out 0.3s;
   background-blend-mode: color;
   background-color: rgba(0, 0, 0, 0.9);
-  cursor: pointer;
 }
 
 .supermarket .image {
@@ -297,10 +305,10 @@ footer li {
 
 @keyframes fadeOut {
   0% {
-    opacity: 1;
+    dislay: flex;
   }
 
   100% {
-    opacity: 0;
+    display: none;
   }
 }
